Almost finished alerts frontend